ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature10/input.ts.stderr
error: An index signature must have exactly one parameter
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexSignatures/parserIndexSignature10/input.ts:2:5
  |
2 |    [a, b]: number
  |     ^

